fix too long filename problem in files-upload-overlay

--- a/frontend/src/app/components/files-upload-overlay/files-upload-overlay.component.scss
+++ b/frontend/src/app/components/files-upload-overlay/files-upload-overlay.component.scss
@@ -10,9 +10,31 @@
 #card-content {
     display: flex;
     padding: 16px;
+    width: calc(100% - 64px);
 }
 
 #card-text {
     flex: 1 1 auto;
     align-self: center;
+    width: 100%;
+}
+
+#card-text-div {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+}
+
+#filename-span {
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    max-width: 100%;
+}
+
+#progress-span {
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    max-width: 100%;
 }
